--- a/cdk/package.json
+++ b/cdk/package.json
@@ -9,6 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "deploy": "cdk deploy --require-approval=never",
+    "destroy": "cdk destroy",
     "synth": "cdk synth --version-reporting false",
     "synth-yaml": "cdk synth > cdk.out/template.yml"
   },
