--- a/cdk/package.json
+++ b/cdk/package.json
@@ -5,9 +5,6 @@
     "cdk": "bin/cdk.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
     "deploy": "cdk deploy --require-approval=never",
     "destroy": "cdk destroy",
     "force-destroy": "cdk destroy --force",
@@ -15,26 +12,11 @@
     "synth-yaml": "cdk synth > cdk.out/template.yml"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.135.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "^1.135.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "aws-cdk": "2.10.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.135.0",
-    "@aws-cdk/aws-ec2": "^1.135.0",
-    "@aws-cdk/aws-ecs": "^1.135.0",
-    "@aws-cdk/aws-efs": "^1.135.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.135.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.135.0",
-    "@aws-cdk/aws-route53": "^1.135.0",
-    "@aws-cdk/aws-route53-targets": "^1.135.0",
-    "@aws-cdk/aws-s3": "^1.135.0",
-    "@aws-cdk/core": "^1.135.0",
+    "aws-cdk-lib": "2.10.0",
+    "constructs": "^10.0.35",
     "source-map-support": "^0.5.16"
   }
 }
