--- a/storage/cloudformation.yml
+++ b/storage/cloudformation.yml
@@ -3,7 +3,7 @@ Resources:
   FileSystem:
     Type: AWS::EFS::FileSystem
     Properties:
-      Encrypted: false
+      Encrypted: true
       BackupPolicy:
         Status: ENABLED
       FileSystemTags:
